--- a/assets/css/mio-style.css
+++ b/assets/css/mio-style.css
@@ -98,13 +98,13 @@ filter: grayscale(100%);
  3-temporizzazione nella classe   */
 
  .ex-8-img:hover{
-  filter: grayscale(100%);
+  filter: grayscale(100%) blur(2px);
   border-radius: 20px;
 
   }
 
 .ex-8-img{
-transition: 2s;
+transition: 1s;
 }
 
  /* ESERCIZIO9: 
@@ -121,4 +121,23 @@ transition: 2s;
 
 .ex-9-img{
 transition: 2s;
+}
+ /* ESERCIZIO 10 
+ 1-creare un animation con un loop a 360 gradi */
+
+
+.ex-10-icon{
+  
+  animation: loop-360 2s infinite linear;
+}
+@keyframes loop-360{
+  
+  0%{
+    transform: rotate(0deg);
+    
+  }
+  
+  100%{
+    transform: rotate(360deg);
+  }
 }
